--- a/templates/menu_builder.html
+++ b/templates/menu_builder.html
@@ -159,6 +159,10 @@
 </section>
 {% endblock %}
 
+{% block extra_styles %}
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}" />
+{% endblock %}
+
 {% block extra_scripts %}
 <script src="{{ url_for('static', path='/js/menu_builder.js') }}" defer></script>
 {% endblock %}
