--- a/templates/menu_list.html
+++ b/templates/menu_list.html
@@ -57,3 +57,6 @@
 </section>
 {% endblock %}
 
+{% block extra_styles %}
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}" />
+{% endblock %}
