--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -93,6 +93,10 @@
     </div>
 </section>
 {% endblock %}
+{% block extra_styles %}
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/recipe_detail.css') }}" />
+{% endblock %}
+
 {% block extra_scripts %}
 <script src="{{ url_for('static', path='/js/recipe_detail.js') }}" defer></script>
 {% endblock %}
