--- a/templates/recipe_edit.html
+++ b/templates/recipe_edit.html
@@ -197,6 +197,10 @@
 </section>
 {% endblock %}
 
+{% block extra_styles %}
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/recipe_form.css') }}" />
+{% endblock %}
+
 {% block extra_scripts %}
 <script src="{{ url_for('static', path='/js/recipe_form.js') }}" defer></script>
 {% endblock %}
