--- a/templates/recipes_list.html
+++ b/templates/recipes_list.html
@@ -68,6 +68,10 @@
 </section>
 {% endblock %}
 
+{% block extra_styles %}
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/recipes.css') }}" />
+{% endblock %}
+
 {% block extra_scripts %}
 <script src="{{ url_for('static', path='/js/recipes.js') }}" defer></script>
 {% endblock %}
