--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -5,6 +5,9 @@
 {% block content %}
 <section class="recipe-detail">
     <div class="container recipe-detail__card">
+        <div class="recipe-detail__nav">
+            <a href="{{ previous_url }}" class="btn btn--ghost btn--small">← Назад</a>
+        </div>
         <div class="recipe-detail__header">
             <div>
                 <p class="recipe-detail__meta">
