--- a/templates/recipe_edit.html
+++ b/templates/recipe_edit.html
@@ -6,6 +6,9 @@
 <section class="recipe-form">
     <div class="container">
         <div class="recipe-form__card">
+            <div class="recipe-form__nav">
+                <a href="{{ previous_url }}" class="btn btn--ghost btn--small">← Назад</a>
+            </div>
             <h1>Редактировать рецепт</h1>
             <p class="recipe-form__subtitle">
                 Измените описание, замените изображения или обновите ингредиенты и шаги.
