--- a/static/css/pages/recipe_detail.css
+++ b/static/css/pages/recipe_detail.css
@@ -16,6 +16,12 @@
     justify-content: space-around;
 }
 
+.recipe-detail__nav {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 16px;
+}
+
 .recipe-detail__meta {
     margin: 0;
     color: var(--text-muted);
@@ -143,4 +149,3 @@
     font-size: 18px;
     cursor: pointer;
 }
-
