--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
@@ -11,8 +11,13 @@
 <body>
 <header class="header">
     <div class="container header__inner">
-        <div class="logo">FoodPlanner</div>
-        <nav class="nav">
+        <a href="{{ url_for('index') }}" class="logo" data-nav-home>FoodPlanner</a>
+        <button class="nav-toggle" data-nav-toggle aria-label="Переключить меню">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <nav class="nav" data-nav-menu>
             {% set current_path = request.url.path %}
             <a
                 href="/"
@@ -81,6 +86,8 @@
         </div>
     </div>
 </footer>
+
+<script src="{{ url_for('static', path='/js/layout.js') }}" defer></script>
 {% block extra_scripts %}{% endblock %}
 </body>
 </html>
